Fix overflowing background

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,14 @@
 @import 'mixins';
 
 .App {
+    position: relative;
     min-height: 100vh;
     @include gradient-animator(180deg, #0E1933, #CA9D8E);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    overflow-x: hidden;
+    overflow: hidden;
 
     &__background {
         height: 100vh;
